fix error in clints details route

--- a/src/main/resources/public/images/app.css
+++ b/src/main/resources/public/images/app.css
@@ -26,5 +26,5 @@ color: black;
 .divide{
   width: 100%;
   margin-top: 1rem;
-  border-top: .2rem solid #D27B34;
+  border-top: .2rem solid #D30C47;
 }
