--- a/src/main/resources/public/images/app.css
+++ b/src/main/resources/public/images/app.css
@@ -3,11 +3,18 @@
   font-weight: 700;
   letter-spacing: .1rem;
   background: rgba(0, 0, 0, 0.2)!important;
+  color: #D30C47;
 }
 .nav-brand img{
   height: 3rem;
 }
-
+.navbar-nav li{
+  padding-right: .7rem;
+}
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link:hover{
+ color: #D30C47;
+}
 .header{
     text-align: center;
     color: #75736C;
