--- a/src/main/resources/public/images/app.css
+++ b/src/main/resources/public/images/app.css
@@ -35,3 +35,6 @@ color: black;
   margin-top: 1rem;
   border-top: .2rem solid #D30C47;
 }
+button:hover{
+            background-color: #D30C47;
+            }
